# dbus-browser

./: .gitignore  LICENSE  Main.hs  README.org  dbus-browser.cabal  stack.yaml
DBusBrowser/: DBus.hs  View.hs
src/: Main.hs  MainNG.hs  Unparse.hs
src/Brick/: Renderable.hs
src/Brick/Widgets/: BusList.hs  HeaderList.hs  Layout.hs
src/DBusBrowser/: DBus.hs  Formatting.hs  View.hs
src/Graphics/Vty/Widgets/: HeaderList.hs  Vim.hs
