Name:                dbus-browser
Version:             0.1.0
Synopsis:            DBus browser for the terminal
License:             BSD3
License-file:        LICENSE
Author:              Hans-Peter Deifel
Maintainer:          hpd@hpdeifel.de
Category:            System
Build-type:          Simple

Cabal-version:       >=1.2


Executable dbus-browser
  Main-is:             Main.hs
  hs-source-dirs:      src/
  Build-depends:       dbus, vty, mtl, base, text, containers, MaybeT, data-default >= 0.5 && <0.6
  Other-modules:       DBusBrowser.View, DBusBrowser.DBus
  ghc-options:         -threaded
