Name:                dbus-browser
Version:             0.1.0
Synopsis:            DBus browser for the terminal
License:             BSD3
License-file:        LICENSE
Author:              Hans-Peter Deifel
Maintainer:          hpd@hpdeifel.de
Category:            System
Build-type:          Simple

Cabal-version:       >=1.2


Executable dbus-browser
  Main-is:             Main.hs
  hs-source-dirs:      src/
  Build-depends:       dbus >= 0.10.10 && <0.11, vty, base, text, containers, MaybeT, data-default >= 0.5 && <0.6,
                       vty-ui >= 1.8 && <1.10, transformers >= 0.4 && <0.5, monads-tf >= 0.1 && <0.2
  Other-modules:       DBusBrowser.DBus,
                       DBusBrowser.Formatting,
                       Graphics.Vty.Widgets.HeaderList,
                       Graphics.Vty.Widgets.Vim,
                       Unparse
  ghc-options:         -threaded -fwarn-incomplete-patterns
